src/test/ui/specialization/issue-38091.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

error[E0277]: the trait bound `(): Valid` is not satisfied
  --> $DIR/issue-38091.rs:9:5
   |
LL |     type Ty: Valid;
   |              ----- required by this bound in `Iterate::Ty`
...
LL |     default type Ty = ();
   |     ^^^^^^^^^^^^^^^^^^^^^ the trait `Valid` is not implemented for `()`

error[E0275]: overflow evaluating the requirement `{integer}: Check`
  --> $DIR/issue-38091.rs:20:5
   |
LL |     fn iterate(self);
   |     ----------------- required by `Iterate::iterate`
...
LL |     Iterate::iterate(0);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: required because of the requirements on the impl of `Iterate<'_>` for `{integer}`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0275, E0277.
For more information about an error, try `rustc --explain E0275`.
